# Generated by Django 5.0.6 on 2024-07-07 04:41

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Bus',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('plate', models.CharField(max_length=10, unique=True)),
                ('color', models.CharField(max_length=50)),
                ('brand', models.CharField(max_length=50)),
                ('model', models.CharField(max_length=50)),
                ('serial', models.CharField(max_length=50)),
                ('year', models.SmallIntegerField()),
                ('is_active', models.BooleanField(default=True)),
                ('create_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='Driver',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('document', models.CharField(max_length=10, unique=True)),
                ('names', models.CharField(max_length=155)),
                ('last_names', models.CharField(max_length=155)),
                ('date_of_birthday', models.DateTimeField()),
                ('is_active', models.BooleanField(default=True)),
                ('create_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='Journey',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('duration_in_seconds', models.IntegerField()),
                ('is_active', models.BooleanField(default=True)),
                ('create_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': '',
                'verbose_name_plural': 's',
            },
        ),
        migrations.CreateModel(
            name='Location',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=155)),
                ('is_active', models.BooleanField(default=True)),
                ('create_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='Passenger',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('document', models.CharField(max_length=10, unique=True)),
                ('names', models.CharField(max_length=155)),
                ('last_names', models.CharField(max_length=155)),
                ('date_of_birthday', models.DateTimeField()),
                ('is_whitelist', models.BooleanField(default=True)),
                ('create_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='Seat',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('seat_x', models.IntegerField()),
                ('seat_y', models.CharField(max_length=1)),
                ('is_active', models.BooleanField(default=True)),
                ('create_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='JourneyDriver',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('datetime_start', models.DateTimeField()),
                ('state', models.CharField(choices=[('PL', 'Planned'), ('OG', 'Ongoing'), ('CO', 'Completed'), ('CA', 'Cancelled'), ('DE', 'Delayed')], default='PL', max_length=2)),
                ('create_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('driver', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.driver')),
                ('journay', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.journey')),
            ],
        ),
        migrations.AddField(
            model_name='journey',
            name='location_id_destination',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='journey_destination', to='app.location'),
        ),
        migrations.AddField(
            model_name='journey',
            name='location_id_origin',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='journey_origin', to='app.location'),
        ),
        migrations.CreateModel(
            name='Ticket',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('states', models.CharField(choices=[('IS', 'Issued'), ('CA', 'Cancelled')], max_length=2)),
                ('create_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('journey_driver', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='app.journeydriver')),
                ('passenger', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.passenger')),
                ('seat', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='app.seat')),
            ],
        ),
    ]
